Enable openJDK17 compatibility